plugins {
  id 'maven-publish'
  id "org.owasp.dependencycheck" version "8.4.2"
  id 'io.spring.dependency-management' version '1.1.4'
}

group "ee.fhir.fhirest"


allprojects {
  apply plugin: "java-library"
  apply plugin: "org.owasp.dependencycheck"
  apply plugin: "io.spring.dependency-management"

  dependencyManagement {
    imports {
      mavenBom("org.springframework.boot:spring-boot-dependencies:${springBootVersion}")
    }
  }

  version rootProject.version
  group rootProject.group

  configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
  }

  sourceCompatibility = 17
  targetCompatibility = 17

  repositories {
    mavenCentral()
  }

  dependencies {
    annotationProcessor "org.projectlombok:lombok:1.18.30"
    compileOnly "org.projectlombok:lombok:1.18.30"

    implementation 'org.springframework:spring-context'
    implementation 'org.springframework.boot:spring-boot-autoconfigure'
    implementation 'jakarta.inject:jakarta.inject-api:2.0.1'
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'

    implementation "org.apache.commons:commons-collections4:4.4"
    implementation "org.apache.commons:commons-lang3:3.13.0"
    implementation "commons-io:commons-io:2.15.0"
  }
}

subprojects { Project project ->
  apply plugin: "maven-publish"

  java {
    withSourcesJar()
  }

  publishing {
    publications {
      mavenJava(MavenPublication) {
        artifactId = project.name
        from components.java
      }
    }
    repositories {
      maven {
        url = uri("https://maven.pkg.github.com/fhirest/fhirest")
        credentials {
          username = project.findProperty("gpr.user") ?: System.getenv("GITHUB_USER")
          password = project.findProperty("gpr.key") ?: System.getenv("GITHUB_TOKEN")
        }
      }
    }
  }

}
